# i2c-fudger

./: README.md  main.py  pyproject.toml
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.vue  api.js  main.js
src/sensor_test/: cli.py  frame_processing.py  i2c_reader.py  models.py  pi_presets.py  schema_decode.py
src/sensor_test/web/: app.py
tests/: test_schema_decode_mpu9150.py
