[project]
name = "sensor-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.11",
  "smbus2>=0.5",
  "uvicorn[standard]>=0.35",
]

[dependency-groups]
dev = [
  "pytest>=8.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
