[project]
name = "sensor-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "fastapi>=0.115",
  "pydantic>=2.11",
  "smbus2>=0.5",
  "uvicorn[standard]>=0.35",
]

[project.scripts]
sensor-test = "sensor_test.cli:main"

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/sensor_test"]

[dependency-groups]
dev = [
  "pytest>=8.4",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
